# PythonProject_26.1_Forms

./: .gitignore  base.html  manage.py  product_form.html  pyproject.toml  pytest.ini  requirements.txt
apps/products/: forms.py  views.py
config/: asgi.py  settings.py  urls.py  wsgi.py
main/: models.py
myproject/: db.sqlite3
myproject/config/: settings.py  urls.py
myproject/myproject/: settings.py
myproject/products/: run_django.py  views.py
myproject/products/templates/products/: product_list.html
myproject/products/tests/: test_forms.py
products/: forms.py  models.py  run_django.py  settings.py  urls.py  validators.py  views.py
products/migrations/: 0001_initial.py
products/templates/products/: product_list.html  template.html
products/templates/users/: login.html  register.html
products/templates/users/emails/: welcome_email.txt
products/templates/users/templates/users/: login.html
templates/: base.html  home.html
users/: admin.py  forms.py  models.py  views.py
users/migrations/: 0001_initial.py
