[project]
name = "pythonproject-26-1-forms"
version = "0.1.0"
description = ""
authors = [
    {name = "AndreyStyuhin",email = "andreyst@olovyannaya.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "requests (==2.32.3)",
    "iniconfig (==2.1.0)",
    "packaging (==25.0)",
    "pillow (==11.3.0)",
    "pluggy (==1.6.0)",
    "pygments (==2.19.2)",
    "pytest (==8.4.1)",
    "pytest-django (==4.11.1)"
]

[tool.poetry]
packages = [{include = "pythonproject_26"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
